--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,10 @@
 	scrollbar-color:  var(--greenM1) transparent ;
 }
 
+textarea.myText::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: var(--greenM1);
+  opacity: 1; /* Firefox */
+}
 
 @media only screen and (max-width: 1000px) {
   .section{
