--- a/src/index.css
+++ b/src/index.css
@@ -42,10 +42,13 @@
   min-height: 100vh;
 }
 */
+#main{
+  min-width: 350px
+}
+
 .section{
   min-height: 100vh;
 }
-
 
 *{
 	scrollbar-width: thin;
@@ -57,7 +60,7 @@ textarea.myText::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
   opacity: 1; /* Firefox */
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1100px) {
   .section{
     width: 80%;
   }
@@ -68,58 +71,51 @@ textarea.myText::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
   }
 } 
 
-
-/*:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+/*Post*/
+@media only screen and (max-width: 720px) {
+  #action-responsive{
+    display: block;
   }
-  a:hover {
-    color: #747bff;
+  #action-responsive2{
+    justify-content: start;
   }
-  button {
-    background-color: #f9f9f9;
+} 
+@media only screen and (max-width: 500px) {
+  #post-responsive{
+    display: block;
   }
-}*/
+  #post-responsive2{
+    justify-content: space-between;
+  }
+} 
+@media only screen and (max-width: 370px) {
+  #action-responsive3{
+    width: 1.5rem;
+  }
+} 
+
+/*Header*/
+@media only screen and (max-width: 380px) {
+  #header-responsive1{
+    width: 6rem;
+    height: 6rem;
+    min-width: 6rem;
+    min-height: 6rem;
+  }
+} 
+
+/*PostPage*/
+@media only screen and (max-width: 620px) {
+  #postPage1{
+    width: 5.5rem;
+    height: 5.5rem;
+    min-width: 5.5rem;
+    min-height: 5.5rem;
+  }
+  #postPage2{
+    display: block;
+  }
+  #postPage3{
+    justify-content: space-between;
+  }
+} 
