--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,13 @@ textarea.myText::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
   opacity: 1; /* Firefox */
 }
 
+@media only screen and (max-width: 550px) {
+  #mode-toggle{
+    display: fixed;
+    top: 10;
+    left: 0;
+  }
+} 
 @media only screen and (max-width: 1100px) {
   .section{
     width: 100%;
@@ -104,6 +111,11 @@ textarea.myText::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     width: 10%;
     max-width: 10%;
     margin-left: 0;
+  }
+  #mode-toggle{
+    position: fixed;
+    top: 10;
+    left: 10px;
   }
 }
 @media only screen and (max-width: 1000px) {
@@ -157,6 +169,27 @@ textarea.myText::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     display: none;
   }
 }
+@media only screen and (max-width: 1500px) {
+  .userBadge{
+    position: fixed;
+    top: 10;
+    right: 0;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  #userBadge{
+    width: 25%;
+  }
+  #userBadge3{
+    margin-left: 0;
+    margin-left: 0;
+  }
+}
+@media only screen and (max-width: 700px) {
+  #userBadge{
+    display: none;
+  }
+}
 
 /*Home Page*/
 @media only screen and (max-width: 800px) {
@@ -164,7 +197,7 @@ textarea.myText::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     gap: 1rem;
   }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
   #homePage{
     width: 85%;
   }
@@ -216,6 +249,11 @@ textarea.myText::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
 } 
 
 /*PostPage*/
+@media only screen and (max-width: 1100px) {
+  #logout-btn{
+    display: none;
+  }
+}
 @media only screen and (max-width: 620px) {
   #postPage1{
     width: 5.5rem;
@@ -230,3 +268,33 @@ textarea.myText::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     justify-content: space-between;
   }
 } 
+
+
+/*Chat Page*/
+@media only screen and (max-width: 1300px) {
+  #chatPage{
+    width: 80%;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  #chatPage{
+    width: 90%;
+  }
+}
+@media only screen and (max-width: 800px) {
+  #chatUsername{
+    visibility: hidden;
+    display: none;
+  }
+}
+@media only screen and (max-width: 700px) {
+  #chatPage2{
+    flex-direction: column;
+  }
+  #chatConversation, #chatMessage{
+    width: 100%;
+  }
+  #chatUsername{
+    visibility: visible;
+  }
+}
