--- a/src/index.css
+++ b/src/index.css
@@ -281,7 +281,7 @@ textarea.myText::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     width: 90%;
   }
 }
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 850px) {
   #chatUsername{
     visibility: hidden;
     display: none;
@@ -296,5 +296,21 @@ textarea.myText::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
   }
   #chatUsername{
     visibility: visible;
+    display: flex;
+  }
+}
+@media only screen and (max-width: 900px) {
+  #message-text{
+    max-width: 220px;
+  }
+}
+@media only screen and (max-width: 470px) {
+  #message-text{
+    max-width: 200px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  #message-text{
+    max-width: 160px;
   }
 }
