--- a/src/index.css
+++ b/src/index.css
@@ -315,3 +315,11 @@ textarea.myText::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     max-width: 160px;
   }
 }
+
+
+/*Modals*/
+@media only screen and (max-width: 490px) {
+  #modal-buttons{
+    flex-direction: column;
+  }
+}
